--- a/site/resources/themes/alien.less
+++ b/site/resources/themes/alien.less
@@ -27,29 +27,12 @@ http://www.earthli.com/software/webcore
 @import "theme-base";
 @import "theme-base-dark";
 
-@body_color: black;
-
-@bright_border: #555;
-
+@background_color: black;
 @text_color: white;
-
+@banner_background_color: #222;
+@footer_background_color: @banner_background_color;
 @title_color: #ff8d46;
-@h3_color: #ffb217;
-
 @link_color: #90be5a;
-@link_hover_color: yellow;
-
 @code_text_color: #a98ebd;
 @highlighted_text_color: #6ca7ff;
 @selected_text_color: #fffb8b;
-
-.banner,
-.footer
-{
-  background-color: #222;
-}
-
-.quote-block
-{
-  background-color: #333;
-}
