--- a/site/resources/themes/blue_tan.css
+++ b/site/resources/themes/blue_tan.css
@@ -43,17 +43,50 @@ h2 {
   border-color: #336699;
 }
 h3 {
-  color: #336699;
+  color: #334499;
 }
 h4 {
-  color: #336699;
-}
-.banner-title {
-  color: #336699;
+  color: #334499;
 }
 .chart-title,
 .preview-title {
   color: #336699;
+}
+.banner {
+  background-color: #336699;
+  color: #ffffff;
+}
+.banner a:link,
+.banner a:visited {
+  color: #cccc99;
+}
+.banner a:hover,
+.banner a:active {
+  color: #ccff99;
+}
+.banner-title {
+  color: #ffffff;
+}
+.banner-content {
+  margin-right: 15px;
+}
+.footer {
+  background-color: #336699;
+  color: #ffffff;
+}
+.footer a:link,
+.footer a:visited {
+  color: #cccc99;
+}
+.footer a:hover,
+.footer a:active {
+  color: #ccff99;
+}
+.footer {
+  padding-bottom: 5px;
+}
+.page {
+  margin-bottom: 0;
 }
 .nav-box,
 .top-box,
@@ -67,20 +100,20 @@ h4 {
 .info-box-bottom,
 .cell-selected,
 .cell-highlight,
-.description-box {
-  border-color: #cccccc;
-}
+.cell-non-empty,
+.description-box,
 table.columns > tbody > tr > td,
 table.columns > tbody > tr > th,
+.abstract {
+  border-color: #cccccc;
+}
 .quote-block,
 .preview,
 .chart,
 pre > code,
 .form-basic-block,
-.abstract,
-.cell-non-empty,
 .pullquote {
-  border-color: #999999;
+  border-color: #f2f2f2;
 }
 .object-navigator .links {
   column-rule-color: #cccccc;
@@ -90,7 +123,7 @@ pre > code,
 .info-box-top,
 .info-box-bottom,
 .subdued {
-  color: #3f3f9e;
+  color: #9c9cb3;
 }
 .info-box-top a:link,
 .info-box-bottom a:link,
@@ -98,7 +131,7 @@ pre > code,
 .info-box-top a:visited,
 .info-box-bottom a:visited,
 .subdued a:visited {
-  color: #6b6b47;
+  color: #c2c2a3;
 }
 .info-box-top a:hover,
 .info-box-bottom a:hover,
@@ -142,16 +175,16 @@ code {
 .quote,
 .quote-inline,
 .quote-block {
-  color: #313179;
+  color: #6f6f91;
 }
 .button {
   background-color: #f0f0f0;
   border-color: #cccccc;
-  color: #313179;
+  color: #595980;
 }
 a.button:link,
 a.button:visited {
-  color: #313179;
+  color: #595980;
 }
 .button.selected {
   background-color: #ffffff;
@@ -159,9 +192,9 @@ a.button:visited {
   color: #375daf;
 }
 .button.disabled {
-  background-color: #f7f7f7;
+  background-color: #f2f2f2;
   border-color: #b3b3b3;
-  color: #313179;
+  color: #9c9cb3;
 }
 .button:hover:not(.disabled):not(.selected) {
   background-color: #ffffff;
@@ -175,36 +208,16 @@ ul.menu .menu-group-title {
   background-color: #e8e8e8;
   border-color: #cccccc;
 }
-.menu-item:hover {
+ul.menu .menu-item:hover {
   background-color: #ffffff;
   border-color: #cccccc;
 }
-.menu-item-description {
-  color: #313179;
+ul.menu .menu-item-description {
+  color: #595980;
 }
 .text-control,
 .menu-control {
   background-color: #f0f0f0;
-  color: #313179;
+  color: #595980;
   border-color: #cccccc;
-}
-.banner,
-.footer {
-  background-color: #336699;
-  color: #ffffff;
-}
-.banner a:link,
-.footer a:link,
-.banner a:visited,
-.footer a:visited {
-  color: #CC9;
-}
-.banner a:hover,
-.footer a:hover,
-.banner a:active,
-.footer a:active {
-  color: #CF9;
-}
-.footer {
-  padding-bottom: 5px;
 }
