--- a/site/resources/themes/crimson.less
+++ b/site/resources/themes/crimson.less
@@ -1,6 +1,6 @@
 /****************************************************************************
 
-Copyright (c) 2002 Marco Von Ballmoos
+Copyright (c) 2002-2014 Marco Von Ballmoos
 
 This file is part of earthli WebCore.
 
@@ -26,20 +26,13 @@ http://www.earthli.com/software/webcore
 
 @import "theme-base";
 
-@body_color: #882829;
-
-@bright_border: #a66f6f;
-@stark_border: #6e0000;
+@background_color: #9d302e;
 
 @text_color: #EEE;
-@dimmer_text_color: #CBA;
-@dimmest_text_color: #987;
 
 @title_color: #eb6049;
-@h3_color: #eea61c;
 
 @link_color: #c2c274;
-@link_hover_color: #F99;
 
 @highlighted_text_color: #77cc67;
 @selected_text_color: #F99;
