--- a/site/resources/themes/emerald.less
+++ b/site/resources/themes/emerald.less
@@ -26,7 +26,7 @@ http://www.earthli.com/software/webcore
 
 @import "theme-base";
 
-@body_color: #7fb079;
+@background_color: #7fb079;
 
 @bright_border: #585;
 @stark_border: darken(@bright_border, 8%);
