--- a/site/resources/themes/midnight.css
+++ b/site/resources/themes/midnight.css
@@ -33,7 +33,7 @@ a:visited {
 }
 a:hover,
 a:active {
-  color: #55cffb;
+  color: #51d1ff;
 }
 h1 {
   color: #ffc31c;
@@ -46,14 +46,38 @@ h3 {
   color: #ffc31c;
 }
 h4 {
-  color: #79cc36;
-}
-.banner-title {
-  color: #79cc36;
+  color: #ffc31c;
 }
 .chart-title,
 .preview-title {
   color: #79cc36;
+}
+.banner {
+  background-color: transparent;
+  color: #ffffff;
+}
+.banner a:link,
+.banner a:visited {
+  color: #05aae5;
+}
+.banner a:hover,
+.banner a:active {
+  color: #51d1ff;
+}
+.banner-title {
+  color: #79cc36;
+}
+.footer {
+  background-color: transparent;
+  color: #ffffff;
+}
+.footer a:link,
+.footer a:visited {
+  color: #05aae5;
+}
+.footer a:hover,
+.footer a:active {
+  color: #51d1ff;
 }
 .nav-box,
 .top-box,
@@ -67,25 +91,25 @@ h4 {
 .info-box-bottom,
 .cell-selected,
 .cell-highlight,
-.description-box {
-  border-color: #444444;
-}
+.cell-non-empty,
+.description-box,
 table.columns > tbody > tr > td,
 table.columns > tbody > tr > th,
+.abstract {
+  border-color: #666666;
+}
 .quote-block,
 .preview,
 .chart,
 pre > code,
 .form-basic-block,
-.abstract,
-.cell-non-empty,
 .pullquote {
-  border-color: #666666;
+  border-color: #999999;
 }
 .object-navigator .links {
-  column-rule-color: #444444;
-  -webkit-column-rule-color: #444444;
-  -moz-column-rule-color: #444444;
+  column-rule-color: #666666;
+  -webkit-column-rule-color: #666666;
+  -moz-column-rule-color: #666666;
 }
 .info-box-top,
 .info-box-bottom,
@@ -106,7 +130,7 @@ pre > code,
 .info-box-top a:active,
 .info-box-bottom a:active,
 .subdued a:active {
-  color: #55cffb;
+  color: #51d1ff;
 }
 .cell-highlight {
   background-color: #1f1f1f;
@@ -146,47 +170,47 @@ code {
 }
 .button {
   background-color: #141414;
-  border-color: #444444;
-  color: #cccccc;
+  border-color: #666666;
+  color: #bfbfbf;
 }
 a.button:link,
 a.button:visited {
-  color: #cccccc;
+  color: #bfbfbf;
 }
 .button.selected {
   background-color: #262626;
-  border-color: #444444;
+  border-color: #666666;
   color: #79cc36;
 }
 .button.disabled {
   background-color: #0f0f0f;
-  border-color: #5e5e5e;
-  color: #cccccc;
+  border-color: #808080;
+  color: #b3b3b3;
 }
 .button:hover:not(.disabled):not(.selected) {
   background-color: #262626;
-  border-color: #444444;
+  border-color: #666666;
 }
 ul.menu {
   background-color: #141414;
-  border-color: #444444;
+  border-color: #666666;
 }
 ul.menu .menu-group-title {
   background-color: #1f1f1f;
-  border-color: #444444;
+  border-color: #666666;
 }
-.menu-item:hover {
+ul.menu .menu-item:hover {
   background-color: #262626;
-  border-color: #444444;
+  border-color: #666666;
 }
-.menu-item-description {
-  color: #cccccc;
+ul.menu .menu-item-description {
+  color: #bfbfbf;
 }
 .text-control,
 .menu-control {
   background-color: #141414;
-  color: #cccccc;
-  border-color: #444444;
+  color: #bfbfbf;
+  border-color: #666666;
 }
 .banner-title {
   color: #ffffff;
