--- a/site/resources/themes/midnight.less
+++ b/site/resources/themes/midnight.less
@@ -27,19 +27,12 @@ http://www.earthli.com/software/webcore
 @import "theme-base";
 @import "theme-base-dark";
 
-@body_color: black;
-
-@bright_border: #444;
-@stark_border: #666;
-
+@background_color: black;
 @text_color: white;
-
 @title_color: #79cc36;
 @h1_color: #ffc31c;
 @h3_color: #ffc31c;
-
 @link_color: #05aae5;
-@link_hover_color: #55cffb;
 
 @code_text_color: #7d9cd1;
 @highlighted_text_color: #c8abff;
