--- a/site/resources/themes/sea.less
+++ b/site/resources/themes/sea.less
@@ -28,16 +28,9 @@ http://www.earthli.com/software/webcore
 
 @light_green: #9C6;
 
-@body_color: #294a83;
-
+@background_color: #294a83;
 @text_color: #DDD;
+@title_color: @light_green;
+@link_color: #4C9CD9;
 @highlighted_text_color: yellow;
 @selected_text_color: @light_green;
-
-@title_color: @light_green;
-@h3_color: lighten(@title_color, 20%);
-
-@link_color: #4C9CD9;
-@link_hover_color: @light_green;
-
-@bright_border: #7697ce;
