--- a/site/resources/themes/slate.less
+++ b/site/resources/themes/slate.less
@@ -26,31 +26,10 @@ http://www.earthli.com/software/webcore
 
 @import "theme-base";
 
-@control_hover_background_color: #444;
-@body_color: #333;
-@disabled_control_background_color: darken(@body_color, 1%);
-@control_background_color: #666;
-@accent_background_color: #555;
-
-@bright_border: #888;
-@medium_border: darken(@bright_border, 10%);
-@stark_border: #444;
-
+@background_color: #333;
 @text_color: silver;
-@dimmer_text_color: #AAA;
-@dimmest_text_color: #888;
-
-@title_color: #FC6;
-@h3_color: #ffc31c;
-
+@title_color: #ffc63f;
+@h3_color: #b1c22d;
 @link_color: #CC6;
-@dimmer_link_color: darken(@link_color, 10%);
-@link_hover_color: #FF9;
-
-@control_text_color: #DDD;
-
-@message_box_text_color: #765;
-@message_box_link_color: #66C;
-
 @highlighted_text_color: #53a131;
 @selected_text_color: #FC6;
