--- a/site/resources/themes/steel.less
+++ b/site/resources/themes/steel.less
@@ -26,31 +26,9 @@ http://www.earthli.com/software/webcore
 
 @import "theme-base";
 
-@control_hover_background_color: #adc4e3;
-@body_color: #9AAECA;
-@disabled_control_background_color: darken(@body_color, 4%);
-@control_background_color: #8A9EBA;
-@accent_background_color: #AABEDA;
-
-@bright_border: #b2c5e0;
-@medium_border: darken(@bright_border, 10%);
-@stark_border: #1A2E4A;
-
-@text_color: #222;
-@dimmer_text_color: #1A2E4A;
-@dimmest_text_color: #2c3a6a;
-
+@background_color: #9AAECA;
+@text_color: #000;
 @title_color: #2d5080;
-@h3_color: #3864a1;
-
-@link_color: #FFD;
-@dimmer_link_color: #4A5E9A;
-@link_hover_color: yellow;
-
-@control_text_color: #444;
-
-@message_box_text_color: #765;
-@message_box_link_color: #66C;
-
-@highlighted_text_color: #944e9d;
-@selected_text_color: #3f6578;
+@link_color: #d8e7ea;
+@highlighted_text_color: #137a26;
+@selected_text_color: #944e9d;
