--- a/site/resources/themes/tan.less
+++ b/site/resources/themes/tan.less
@@ -1,6 +1,6 @@
 /****************************************************************************
 
-Copyright (c) 2002 Marco Von Ballmoos
+Copyright (c) 2002-2014 Marco Von Ballmoos
 
 This file is part of earthli WebCore.
 
@@ -26,26 +26,11 @@ http://www.earthli.com/software/webcore
 
 @import "theme-base";
 
-@background_color: white;
+@background_color: #e6e8bd;
 
-@text_color: #225;
-
-@banner_background_color: @title_color;
-@footer_background_color: @title_color;
-@banner_text_color: @background_color;
-@footer_text_color: @background_color;
-@banner_link_color: #CC9;
-@footer_link_color: @banner_link_color;
-@banner_link_hover_color: #CF9;
-@footer_link_hover_color: @banner_link_hover_color;
-
-@bright_border: darken(@background_color, 20%);
-
-@title_color: #369;
-@banner_title_color: white;
-
-@link_color: #996;
-@link_hover_color: #9C6;
+@text_color: #544f40;
+@title_color: #eb6049;
+@link_color: #2a77cc;
 
 @highlighted_text_color: #0A0;
-@selected_text_color: #375daf;
+@selected_text_color: #5088ff;
