--- a/site/resources/themes/theme-base-dark.less
+++ b/site/resources/themes/theme-base-dark.less
@@ -1,5 +1,5 @@
-@body_color: black;
-@accent_background_color: lighten(@body_color, 12%);
+@background_color: black;
+@accent_background_color: lighten(@background_color, 12%);
 
 @text_color: white;
 @dimmer_text_color: darken(@text_color, 20%);
@@ -8,12 +8,12 @@
 @link_color: blue;
 @dimmer_link_color: lighten(@link_color, 15%);
 
-@bright_border: lighten(@body_color, 40%);
+@bright_border: lighten(@background_color, 40%);
 @medium_border: lighten(@bright_border, 10%);
 @stark_border: lighten(@bright_border, 20%);
 
-@control_background_color: lighten(@body_color, 8%);
+@control_background_color: lighten(@background_color, 8%);
 
-@disabled_control_background_color: lighten(@body_color, 6%);
+@disabled_control_background_color: lighten(@background_color, 6%);
 
-@control_hover_background_color: lighten(@body_color, 15%);
+@control_hover_background_color: lighten(@background_color, 15%);
