--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -8,48 +8,61 @@
 @page_max_width: 900px;
 @page_min_width: 500px;
 
-@body_color: white;
+@background_color: white;
 @text_color: #333;
 
-@accent_background_color: darken(@body_color, 9%);
+@accent_background_color: darken(@background_color, 9%);
 
-@dimmer_text_color: lighten(@text_color, 10%);
-@dimmest_text_color: lighten(@text_color, 20%);
+@dimmer_text_color: mix(@text_color, @background_color, 65%);
+@dimmest_text_color: mix(@text_color, @background_color, 45%);
 
 @link_color: blue;
-@dimmer_link_color: darken(@link_color, 15%);
-@link_hover_color: red;
+@dimmer_link_color: mix(@link_color, @background_color, 60%);
+@link_hover_color: saturate(lighten(@link_color, 20%), 20%);
 
 @title_color: @text_color;
 @h1_color: @title_color;
 @h2_color: @title_color;
-@h3_color: @title_color;
-@h4_color: @title_color;
+@h3_color: spin(@title_color, 20%);
+@h4_color: @h3_color;
+
 @banner_title_color: @title_color;
+@banner_text_color: @text_color;
+@footer_text_color: @text_color;
+@banner_background_color: transparent;
+@footer_background_color: transparent;
+
+@banner_link_color: @link_color;
+@footer_link_color: @link_color;
+@banner_link_hover_color: @link_hover_color;
+@footer_link_hover_color: @link_hover_color;
 
 @hairline_border_width: 1px;
 @thin_border_width: 3px;
 @thick_border_width: 6px;
 
-@bright_border: darken(@body_color, 30%);
+@bright_border: mix(@text_color, @background_color, 30%);
 @medium_border: darken(@bright_border, 10%);
-@stark_border: darken(@bright_border, 20%);
+@stark_border: darken(@background_color, 5%);
 
 @code_text_color: @text_color;
 @highlighted_text_color: green;
 @selected_text_color: @text_color;
 
-@control_text_color: @dimmer_text_color;
-@control_background_color: darken(@body_color, 6%);
+@control_text_color: mix(@text_color, @background_color, 75%);
+@control_background_color: darken(@background_color, 6%);
 @control_border_color: @bright_border;
+
+@edit_control_text_color: @control_text_color;
+@edit_control_background_color: @control_background_color;
 
 @selected_control_text_color: @selected_text_color;
 
-@disabled_control_text_color: @dimmer_text_color;
-@disabled_control_background_color: darken(@body_color, 3%);
+@disabled_control_text_color: @dimmest_text_color;
+@disabled_control_background_color: @stark_border;
 @disabled_control_border_color: @medium_border;
 
-@control_hover_background_color: lighten(@body_color, 3%);
+@control_hover_background_color: lighten(@background_color, 3%);
 @control_hover_border_color: @bright_border;
 
 @message_box_text_color: #765;
