--- a/site/resources/themes/alien.css
+++ b/site/resources/themes/alien.css
@@ -33,7 +33,7 @@ a:visited {
 }
 a:hover,
 a:active {
-  color: #ffff00;
+  color: #c2e896;
 }
 h1 {
   color: #ff8d46;
@@ -43,17 +43,50 @@ h2 {
   border-color: #ff8d46;
 }
 h3 {
-  color: #ffb217;
+  color: #ffcb46;
 }
 h4 {
-  color: #ff8d46;
-}
-.banner-title {
-  color: #ff8d46;
+  color: #ffcb46;
 }
 .chart-title,
 .preview-title {
   color: #ff8d46;
+}
+.banner {
+  background-color: #222222;
+  color: #ffffff;
+}
+.banner a:link,
+.banner a:visited {
+  color: #90be5a;
+}
+.banner a:hover,
+.banner a:active {
+  color: #c2e896;
+}
+.banner-title {
+  color: #ff8d46;
+}
+.banner-content {
+  margin-right: 15px;
+}
+.footer {
+  background-color: #222222;
+  color: #ffffff;
+}
+.footer a:link,
+.footer a:visited {
+  color: #90be5a;
+}
+.footer a:hover,
+.footer a:active {
+  color: #c2e896;
+}
+.footer {
+  padding-bottom: 5px;
+}
+.page {
+  margin-bottom: 0;
 }
 .nav-box,
 .top-box,
@@ -67,25 +100,25 @@ h4 {
 .info-box-bottom,
 .cell-selected,
 .cell-highlight,
-.description-box {
-  border-color: #555555;
-}
+.cell-non-empty,
+.description-box,
 table.columns > tbody > tr > td,
 table.columns > tbody > tr > th,
+.abstract {
+  border-color: #666666;
+}
 .quote-block,
 .preview,
 .chart,
 pre > code,
 .form-basic-block,
-.abstract,
-.cell-non-empty,
 .pullquote {
-  border-color: #888888;
+  border-color: #999999;
 }
 .object-navigator .links {
-  column-rule-color: #555555;
-  -webkit-column-rule-color: #555555;
-  -moz-column-rule-color: #555555;
+  column-rule-color: #666666;
+  -webkit-column-rule-color: #666666;
+  -moz-column-rule-color: #666666;
 }
 .info-box-top,
 .info-box-bottom,
@@ -106,7 +139,7 @@ pre > code,
 .info-box-top a:active,
 .info-box-bottom a:active,
 .subdued a:active {
-  color: #ffff00;
+  color: #c2e896;
 }
 .cell-highlight {
   background-color: #1f1f1f;
@@ -146,52 +179,45 @@ code {
 }
 .button {
   background-color: #141414;
-  border-color: #555555;
-  color: #cccccc;
+  border-color: #666666;
+  color: #bfbfbf;
 }
 a.button:link,
 a.button:visited {
-  color: #cccccc;
+  color: #bfbfbf;
 }
 .button.selected {
   background-color: #262626;
-  border-color: #555555;
+  border-color: #666666;
   color: #fffb8b;
 }
 .button.disabled {
   background-color: #0f0f0f;
-  border-color: #6f6f6f;
-  color: #cccccc;
+  border-color: #808080;
+  color: #b3b3b3;
 }
 .button:hover:not(.disabled):not(.selected) {
   background-color: #262626;
-  border-color: #555555;
+  border-color: #666666;
 }
 ul.menu {
   background-color: #141414;
-  border-color: #555555;
+  border-color: #666666;
 }
 ul.menu .menu-group-title {
   background-color: #1f1f1f;
-  border-color: #555555;
+  border-color: #666666;
 }
-.menu-item:hover {
+ul.menu .menu-item:hover {
   background-color: #262626;
-  border-color: #555555;
+  border-color: #666666;
 }
-.menu-item-description {
-  color: #cccccc;
+ul.menu .menu-item-description {
+  color: #bfbfbf;
 }
 .text-control,
 .menu-control {
   background-color: #141414;
-  color: #cccccc;
-  border-color: #555555;
-}
-.banner,
-.footer {
-  background-color: #222;
-}
-.quote-block {
-  background-color: #333;
+  color: #bfbfbf;
+  border-color: #666666;
 }
