--- a/site/resources/themes/crimson.css
+++ b/site/resources/themes/crimson.css
@@ -1,6 +1,6 @@
 /****************************************************************************
 
-Copyright (c) 2002 Marco Von Ballmoos
+Copyright (c) 2002-2014 Marco Von Ballmoos
 
 This file is part of earthli WebCore.
 
@@ -24,7 +24,7 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 body {
-  background-color: #882829;
+  background-color: #9d302e;
   color: #eeeeee;
 }
 a:link,
@@ -33,7 +33,7 @@ a:visited {
 }
 a:hover,
 a:active {
-  color: #ff9999;
+  color: #ebebb1;
 }
 h1 {
   color: #eb6049;
@@ -43,17 +43,41 @@ h2 {
   border-color: #eb6049;
 }
 h3 {
-  color: #eea61c;
+  color: #eb9649;
 }
 h4 {
-  color: #eb6049;
-}
-.banner-title {
-  color: #eb6049;
+  color: #eb9649;
 }
 .chart-title,
 .preview-title {
   color: #eb6049;
+}
+.banner {
+  background-color: transparent;
+  color: #eeeeee;
+}
+.banner a:link,
+.banner a:visited {
+  color: #c2c274;
+}
+.banner a:hover,
+.banner a:active {
+  color: #ebebb1;
+}
+.banner-title {
+  color: #eb6049;
+}
+.footer {
+  background-color: transparent;
+  color: #eeeeee;
+}
+.footer a:link,
+.footer a:visited {
+  color: #c2c274;
+}
+.footer a:hover,
+.footer a:active {
+  color: #ebebb1;
 }
 .nav-box,
 .top-box,
@@ -67,30 +91,30 @@ h4 {
 .info-box-bottom,
 .cell-selected,
 .cell-highlight,
-.description-box {
-  border-color: #a66f6f;
-}
+.cell-non-empty,
+.description-box,
 table.columns > tbody > tr > td,
 table.columns > tbody > tr > th,
+.abstract {
+  border-color: #b56968;
+}
 .quote-block,
 .preview,
 .chart,
 pre > code,
 .form-basic-block,
-.abstract,
-.cell-non-empty,
 .pullquote {
-  border-color: #6e0000;
+  border-color: #892a28;
 }
 .object-navigator .links {
-  column-rule-color: #a66f6f;
-  -webkit-column-rule-color: #a66f6f;
-  -moz-column-rule-color: #a66f6f;
+  column-rule-color: #b56968;
+  -webkit-column-rule-color: #b56968;
+  -moz-column-rule-color: #b56968;
 }
 .info-box-top,
 .info-box-bottom,
 .subdued {
-  color: #998877;
+  color: #c18684;
 }
 .info-box-top a:link,
 .info-box-bottom a:link,
@@ -98,7 +122,7 @@ pre > code,
 .info-box-top a:visited,
 .info-box-bottom a:visited,
 .subdued a:visited {
-  color: #a2a247;
+  color: #b38858;
 }
 .info-box-top a:hover,
 .info-box-bottom a:hover,
@@ -106,13 +130,13 @@ pre > code,
 .info-box-top a:active,
 .info-box-bottom a:active,
 .subdued a:active {
-  color: #ff9999;
+  color: #ebebb1;
 }
 .cell-highlight {
-  background-color: #651e1e;
+  background-color: #7a2524;
 }
 .cell-selected {
-  background-color: #702122;
+  background-color: #852927;
 }
 .caution,
 .warning,
@@ -142,49 +166,49 @@ code {
 .quote,
 .quote-inline,
 .quote-block {
-  color: #ccbbaa;
+  color: #d2acab;
 }
 .button {
-  background-color: #702122;
-  border-color: #a66f6f;
-  color: #ccbbaa;
+  background-color: #852927;
+  border-color: #b56968;
+  color: #dabfbe;
 }
 a.button:link,
 a.button:visited {
-  color: #ccbbaa;
+  color: #dabfbe;
 }
 .button.selected {
-  background-color: #942b2d;
-  border-color: #a66f6f;
+  background-color: #a93431;
+  border-color: #b56968;
   color: #ff9999;
 }
 .button.disabled {
-  background-color: #7c2525;
-  border-color: #8c5656;
-  color: #ccbbaa;
+  background-color: #892a28;
+  border-color: #9d4e4d;
+  color: #c18684;
 }
 .button:hover:not(.disabled):not(.selected) {
-  background-color: #942b2d;
-  border-color: #a66f6f;
+  background-color: #a93431;
+  border-color: #b56968;
 }
 ul.menu {
-  background-color: #702122;
-  border-color: #a66f6f;
+  background-color: #852927;
+  border-color: #b56968;
 }
 ul.menu .menu-group-title {
-  background-color: #651e1e;
-  border-color: #a66f6f;
+  background-color: #7a2524;
+  border-color: #b56968;
 }
-.menu-item:hover {
-  background-color: #942b2d;
-  border-color: #a66f6f;
+ul.menu .menu-item:hover {
+  background-color: #a93431;
+  border-color: #b56968;
 }
-.menu-item-description {
-  color: #ccbbaa;
+ul.menu .menu-item-description {
+  color: #dabfbe;
 }
 .text-control,
 .menu-control {
-  background-color: #702122;
-  color: #ccbbaa;
-  border-color: #a66f6f;
+  background-color: #852927;
+  color: #dabfbe;
+  border-color: #b56968;
 }
