--- a/site/resources/themes/eggplant.less
+++ b/site/resources/themes/eggplant.less
@@ -26,7 +26,7 @@ http://www.earthli.com/software/webcore
 
 @import "theme-base";
 
-@body_color: #535;
+@background_color: #535;
 
 @bright_border: #987;
 @stark_border: #987;
