--- a/site/resources/themes/mocha.less
+++ b/site/resources/themes/mocha.less
@@ -24,28 +24,12 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
+
 @import "theme-base";
 
-@background_color: white;
-
-@text_color: #225;
-
-@banner_background_color: @title_color;
-@footer_background_color: @title_color;
-@banner_text_color: @background_color;
-@footer_text_color: @background_color;
-@banner_link_color: #CC9;
-@footer_link_color: @banner_link_color;
-@banner_link_hover_color: #CF9;
-@footer_link_hover_color: @banner_link_hover_color;
-
-@bright_border: darken(@background_color, 20%);
-
-@title_color: #369;
-@banner_title_color: white;
-
-@link_color: #996;
-@link_hover_color: #9C6;
-
-@highlighted_text_color: #0A0;
-@selected_text_color: #375daf;
+@background_color: #544332;
+@text_color: mix(white, @background_color, 80%);
+@title_color: #bc561f;
+@link_color: #CBA;
+@highlighted_text_color: #b1c22d;
+@selected_text_color: #ffc63f;
