--- a/site/resources/themes/osx_panther.less
+++ b/site/resources/themes/osx_panther.less
@@ -1,6 +1,6 @@
 /****************************************************************************
 
-Copyright (c) 2002 Marco Von Ballmoos
+Copyright (c) 2002-2014 Marco Von Ballmoos
 
 This file is part of earthli WebCore.
 
@@ -24,4 +24,58 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
+@import "theme-base";
 
+@background_color: #CCC;
+@text_color: #222;
+@title_color: @text_color;
+@link_color: white;
+@link_hover_color: #06C;
+@highlighted_text_color: #C8F39C;
+@selected_text_color: #366dc8;
+@edit_control_background_color: white;
+
+body
+{
+  background-image: url(osx/os_x_app_background.png);
+  background-repeat: repeat;
+}
+
+.cell-selected
+{
+  background-image: url(osx/10_percent_black.png);
+  background-repeat: repeat;
+}
+
+.cell-highlight
+{
+  background-image: url(osx/5_percent_black.png);
+  background-repeat: repeat;
+}
+
+.graph-foreground
+{
+  background-image: url(osx/graph_full.png);
+  background-repeat: repeat;
+}
+
+.chart,
+.preview
+{
+  .extruded_border(2px);
+}
+
+.form-basic,
+.form-basic-block
+{
+  .engraved_border(2px);
+  background-image: url(osx/5_percent_black.png);
+  background-repeat: repeat;
+  padding: @small_spacing;
+}
+
+.text-control,
+.menu-control
+{
+  .engraved_border;
+}
