--- a/site/resources/themes/sea.css
+++ b/site/resources/themes/sea.css
@@ -33,7 +33,7 @@ a:visited {
 }
 a:hover,
 a:active {
-  color: #99cc66;
+  color: #95ccf6;
 }
 h1 {
   color: #99cc66;
@@ -43,17 +43,41 @@ h2 {
   border-color: #99cc66;
 }
 h3 {
-  color: #cce6b3;
+  color: #77cc66;
 }
 h4 {
-  color: #99cc66;
-}
-.banner-title {
-  color: #99cc66;
+  color: #77cc66;
 }
 .chart-title,
 .preview-title {
   color: #99cc66;
+}
+.banner {
+  background-color: transparent;
+  color: #dddddd;
+}
+.banner a:link,
+.banner a:visited {
+  color: #4c9cd9;
+}
+.banner a:hover,
+.banner a:active {
+  color: #95ccf6;
+}
+.banner-title {
+  color: #99cc66;
+}
+.footer {
+  background-color: transparent;
+  color: #dddddd;
+}
+.footer a:link,
+.footer a:visited {
+  color: #4c9cd9;
+}
+.footer a:hover,
+.footer a:active {
+  color: #95ccf6;
 }
 .nav-box,
 .top-box,
@@ -67,30 +91,30 @@ h4 {
 .info-box-bottom,
 .cell-selected,
 .cell-highlight,
-.description-box {
-  border-color: #7697ce;
-}
+.cell-non-empty,
+.description-box,
 table.columns > tbody > tr > td,
 table.columns > tbody > tr > th,
+.abstract {
+  border-color: #5f769e;
+}
 .quote-block,
 .preview,
 .chart,
 pre > code,
 .form-basic-block,
-.abstract,
-.cell-non-empty,
 .pullquote {
-  border-color: #3a62a4;
+  border-color: #233f70;
 }
 .object-navigator .links {
-  column-rule-color: #7697ce;
-  -webkit-column-rule-color: #7697ce;
-  -moz-column-rule-color: #7697ce;
+  column-rule-color: #5f769e;
+  -webkit-column-rule-color: #5f769e;
+  -moz-column-rule-color: #5f769e;
 }
 .info-box-top,
 .info-box-bottom,
 .subdued {
-  color: #ffffff;
+  color: #7a8cac;
 }
 .info-box-top a:link,
 .info-box-bottom a:link,
@@ -98,7 +122,7 @@ pre > code,
 .info-box-top a:visited,
 .info-box-bottom a:visited,
 .subdued a:visited {
-  color: #2676b3;
+  color: #3e7bb7;
 }
 .info-box-top a:hover,
 .info-box-bottom a:hover,
@@ -106,7 +130,7 @@ pre > code,
 .info-box-top a:active,
 .info-box-bottom a:active,
 .subdued a:active {
-  color: #99cc66;
+  color: #95ccf6;
 }
 .cell-highlight {
   background-color: #1e3660;
@@ -142,49 +166,49 @@ code {
 .quote,
 .quote-inline,
 .quote-block {
-  color: #f7f7f7;
+  color: #9eaabe;
 }
 .button {
   background-color: #223d6c;
-  border-color: #7697ce;
-  color: #f7f7f7;
+  border-color: #5f769e;
+  color: #b0b8c7;
 }
 a.button:link,
 a.button:visited {
-  color: #f7f7f7;
+  color: #b0b8c7;
 }
 .button.selected {
   background-color: #2d518f;
-  border-color: #7697ce;
+  border-color: #5f769e;
   color: #99cc66;
 }
 .button.disabled {
-  background-color: #254377;
-  border-color: #507ac1;
-  color: #f7f7f7;
+  background-color: #233f70;
+  border-color: #4c5e7e;
+  color: #7a8cac;
 }
 .button:hover:not(.disabled):not(.selected) {
   background-color: #2d518f;
-  border-color: #7697ce;
+  border-color: #5f769e;
 }
 ul.menu {
   background-color: #223d6c;
-  border-color: #7697ce;
+  border-color: #5f769e;
 }
 ul.menu .menu-group-title {
   background-color: #1e3660;
-  border-color: #7697ce;
+  border-color: #5f769e;
 }
-.menu-item:hover {
+ul.menu .menu-item:hover {
   background-color: #2d518f;
-  border-color: #7697ce;
+  border-color: #5f769e;
 }
-.menu-item-description {
-  color: #f7f7f7;
+ul.menu .menu-item-description {
+  color: #b0b8c7;
 }
 .text-control,
 .menu-control {
   background-color: #223d6c;
-  color: #f7f7f7;
-  border-color: #7697ce;
+  color: #b0b8c7;
+  border-color: #5f769e;
 }
