--- a/site/resources/themes/shale.less
+++ b/site/resources/themes/shale.less
@@ -26,31 +26,10 @@ http://www.earthli.com/software/webcore
 
 @import "theme-base";
 
-@control_hover_background_color: #5e667b;
-@body_color: #4A525A;
-@disabled_control_background_color: darken(@body_color, 1%);
-@control_background_color: #434C56;
-@accent_background_color: #394149;
-
-@bright_border: #999;
-@medium_border: darken(@bright_border, 10%);
-@stark_border: #666;
-
+@background_color: #4A525A;
 @text_color: #CCC;
-@dimmer_text_color: #AAA;
-@dimmest_text_color: #888;
-
-@title_color: #CCC;
-@h3_color: #c7d9ff;
-
+@title_color: #a1c9ff;
 @link_color: white;
-@dimmer_link_color: #CCC;
-@link_hover_color: yellow;
-
-@control_text_color: #DDD;
-
-@message_box_text_color: #765;
-@message_box_link_color: #66C;
-
+@link_hover_color: #fcff4e;
 @highlighted_text_color: #8C8;
 @selected_text_color: #a1c9ff;
