--- a/site/resources/themes/slate.css
+++ b/site/resources/themes/slate.css
@@ -33,27 +33,51 @@ a:visited {
 }
 a:hover,
 a:active {
-  color: #ffff99;
+  color: #f0f0a8;
 }
 h1 {
-  color: #ffcc66;
+  color: #ffc63f;
 }
 h2 {
-  color: #ffcc66;
-  border-color: #ffcc66;
+  color: #ffc63f;
+  border-color: #ffc63f;
 }
 h3 {
-  color: #ffc31c;
+  color: #b1c22d;
 }
 h4 {
-  color: #ffcc66;
-}
-.banner-title {
-  color: #ffcc66;
+  color: #b1c22d;
 }
 .chart-title,
 .preview-title {
-  color: #ffcc66;
+  color: #ffc63f;
+}
+.banner {
+  background-color: transparent;
+  color: #c0c0c0;
+}
+.banner a:link,
+.banner a:visited {
+  color: #cccc66;
+}
+.banner a:hover,
+.banner a:active {
+  color: #f0f0a8;
+}
+.banner-title {
+  color: #ffc63f;
+}
+.footer {
+  background-color: transparent;
+  color: #c0c0c0;
+}
+.footer a:link,
+.footer a:visited {
+  color: #cccc66;
+}
+.footer a:hover,
+.footer a:active {
+  color: #f0f0a8;
 }
 .nav-box,
 .top-box,
@@ -67,30 +91,30 @@ h4 {
 .info-box-bottom,
 .cell-selected,
 .cell-highlight,
-.description-box {
-  border-color: #888888;
-}
+.cell-non-empty,
+.description-box,
 table.columns > tbody > tr > td,
 table.columns > tbody > tr > th,
+.abstract {
+  border-color: #5d5d5d;
+}
 .quote-block,
 .preview,
 .chart,
 pre > code,
 .form-basic-block,
-.abstract,
-.cell-non-empty,
 .pullquote {
-  border-color: #444444;
+  border-color: #262626;
 }
 .object-navigator .links {
-  column-rule-color: #888888;
-  -webkit-column-rule-color: #888888;
-  -moz-column-rule-color: #888888;
+  column-rule-color: #5d5d5d;
+  -webkit-column-rule-color: #5d5d5d;
+  -moz-column-rule-color: #5d5d5d;
 }
 .info-box-top,
 .info-box-bottom,
 .subdued {
-  color: #888888;
+  color: #727272;
 }
 .info-box-top a:link,
 .info-box-bottom a:link,
@@ -98,7 +122,7 @@ pre > code,
 .info-box-top a:visited,
 .info-box-bottom a:visited,
 .subdued a:visited {
-  color: #bfbf40;
+  color: #8f8f52;
 }
 .info-box-top a:hover,
 .info-box-bottom a:hover,
@@ -106,13 +130,13 @@ pre > code,
 .info-box-top a:active,
 .info-box-bottom a:active,
 .subdued a:active {
-  color: #ffff99;
+  color: #f0f0a8;
 }
 .cell-highlight {
-  background-color: #555555;
+  background-color: #1c1c1c;
 }
 .cell-selected {
-  background-color: #666666;
+  background-color: #242424;
 }
 .caution,
 .warning,
@@ -128,7 +152,7 @@ pre > code,
   color: #6666cc;
 }
 .graph-foreground {
-  background-color: #ffcc66;
+  background-color: #ffc63f;
 }
 .highlight {
   color: #53a131;
@@ -142,49 +166,49 @@ code {
 .quote,
 .quote-inline,
 .quote-block {
-  color: #aaaaaa;
+  color: #8f8f8f;
 }
 .button {
-  background-color: #666666;
-  border-color: #888888;
-  color: #dddddd;
+  background-color: #242424;
+  border-color: #5d5d5d;
+  color: #9d9d9d;
 }
 a.button:link,
 a.button:visited {
-  color: #dddddd;
+  color: #9d9d9d;
 }
 .button.selected {
-  background-color: #444444;
-  border-color: #888888;
+  background-color: #3b3b3b;
+  border-color: #5d5d5d;
   color: #ffcc66;
 }
 .button.disabled {
-  background-color: #303030;
-  border-color: #6f6f6f;
-  color: #aaaaaa;
+  background-color: #262626;
+  border-color: #444444;
+  color: #727272;
 }
 .button:hover:not(.disabled):not(.selected) {
-  background-color: #444444;
-  border-color: #888888;
+  background-color: #3b3b3b;
+  border-color: #5d5d5d;
 }
 ul.menu {
-  background-color: #666666;
-  border-color: #888888;
+  background-color: #242424;
+  border-color: #5d5d5d;
 }
 ul.menu .menu-group-title {
-  background-color: #555555;
-  border-color: #888888;
+  background-color: #1c1c1c;
+  border-color: #5d5d5d;
 }
-.menu-item:hover {
-  background-color: #444444;
-  border-color: #888888;
+ul.menu .menu-item:hover {
+  background-color: #3b3b3b;
+  border-color: #5d5d5d;
 }
-.menu-item-description {
-  color: #dddddd;
+ul.menu .menu-item-description {
+  color: #9d9d9d;
 }
 .text-control,
 .menu-control {
-  background-color: #666666;
-  color: #dddddd;
-  border-color: #888888;
+  background-color: #242424;
+  color: #9d9d9d;
+  border-color: #5d5d5d;
 }
