--- a/site/resources/themes/tangerine.less
+++ b/site/resources/themes/tangerine.less
@@ -26,31 +26,9 @@ http://www.earthli.com/software/webcore
 
 @import "theme-base";
 
-@control_hover_background_color: lighten(@body_color, 3%);
-@body_color: #ffe6bd;
-@disabled_control_background_color: darken(@body_color, 5%);
-@control_background_color: darken(@body_color, 10%);
-@accent_background_color: darken(@body_color, 20%);
-
-@bright_border: #999999;
-@medium_border: darken(@bright_border, 10%);
-@stark_border: darken(@bright_border, 20%);
-
+@background_color: #ffe6bd;
 @text_color: #333;
-@dimmer_text_color: darken(@text_color, 10%);
-@dimmest_text_color: darken(@text_color, 20%);
-
-@title_color: #79a251;
-@h3_color: lighten(@title_color, 10%);
-
+@title_color: #65a23b;
 @link_color: #0055BB;
-@dimmer_link_color: darken(@link_color, 5%);
-@link_hover_color: #699C36;
-
-@control_text_color: @dimmer_text_color;
-
-@message_box_text_color: #765;
-@message_box_link_color: #66C;
-
 @highlighted_text_color: #ff5f05;
 @selected_text_color: @title_color;
